--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,8 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !^/blob
 RewriteCond %{REQUEST_URI} !^/public/portfolio/js
+RewriteCond %{REQUEST_URI} !^/exam_1
+RewriteCond %{REQUEST_URI} !^/phpmyadmin
 ErrorDocument 404 /index.php
 RewriteRule ^(.*)$ index.php?/$1 [L]
 Options -Indexes
