started group project

--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,9 @@ RewriteCond %{REQUEST_URI} !^/public/ecommerce/js
 RewriteCond %{REQUEST_URI} !^/public/ecommerce/local
 RewriteCond %{REQUEST_URI} !^/public/ecommerce/files
 RewriteCond %{REQUEST_URI} !^/exam_1
+RewriteCond %{REQUEST_URI} !^/exam_2
 RewriteCond %{REQUEST_URI} !^/phpmyadmin
+RewriteCond %{REQUEST_URI} !^/ecommerce-group
 ErrorDocument 404 /index.php
 RewriteRule ^(.*)$ index.php?/$1 [L]
 Options -Indexes
